--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -1,5 +1,6 @@
 {% extends "core/base.html" %}
 {% load static %}
+{% block title %}Strona główna{% endblock %}
 {% block navbar %}
   <li class="nav-item">
     <a class="nav-link" href="{% url 'core:home' %}">Strona główna</a>
