modify core base template; create storage ingredient list view

--- a/templates/bartender/base.html
+++ b/templates/bartender/base.html
@@ -3,4 +3,7 @@
   <li class="nav-item">
     <a class="nav-link" href="{% url 'bartender:home' %}">Strona główna</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'bartender:storage_list' %}">Magazyn</a>
+  </li>
 {% endblock %}
