--- a/templates/bartender/home.html
+++ b/templates/bartender/home.html
@@ -1,6 +1,6 @@
 {% extends "bartender/base.html" %}
 {% load static %}
-{% block title %}Strona główna - customer{% endblock %}
+{% block title %}Strona główna - bartender{% endblock %}
 
 
 {% block content %}
