--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -38,12 +38,14 @@
   <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"/>
   <link href="{% static 'css/now-ui-kit.css' %}?v=1.3.0" rel="stylesheet"/>
   <!-- CSS Just for demo purpose, don't include it in your project -->
-  <link href="{% static 'demo/demo.css' %}" rel="stylesheet"/>
+  {#  <link href="{% static 'demo/demo.css' %}" rel="stylesheet"/>#}
+  <link href="{% static 'css/core.css' %}" rel="stylesheet"/>
 </head>
 
 <body class="landing-page sidebar-collapse">
+
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-default" style="background: rebeccapurple">
+<nav class="navbar navbar-expand-lg navbar-default navbar-color">
   {#  <a class="navbar-brand" href="#">Navbar</a>#}
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -86,33 +88,33 @@
 <!-- End Navbar -->
 
 
-<div class="wrapper">
-  {% block front_foto %} {% endblock %}
-  <div class="section section-about-us">
-    <div class="container">
-      <div class="col-11 col-lg-11">
-        {% block content %}{% endblock %}
-      </div>
+<!-- Block Content -->
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12 col-lg-11 mx-auto c-body px-5 py-3">
+      {% block content %}{% endblock %}
     </div>
   </div>
-
-  <footer class="footer footer-default">
-    <div class=" container ">
-      <div class="copyright" id="copyright">
-        &copy;
-        <script>
-            document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
-        </script>
-        , Designed by
-        <a href="https://www.invisionapp.com" target="_blank">Invision</a>
-        . Coded by
-        <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>
-        . Implemented and modified by
-        <a href="https://oskarmay.pl" target="_blank">Oskarmay</a>
-      </div>
-    </div>
-  </footer>
 </div>
+<!-- End Block Content -->
+
+
+<!-- Footer -->
+<footer class="bg-light text-center text-lg-start">
+  <!-- Copyright -->
+  <div class="text-center p-3 footer-color" id="copyright">
+    &copy;
+    <script>
+        document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
+    </script>
+    Created by
+    <a href="https://oskarmay.pl" target="_blank">Oskarmay</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- End Footer -->
+
+
 <!--   Core JS Files   -->
 <script src="{% static 'js/core/jquery.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/core/popper.min.js' %}" type="text/javascript"></script>
@@ -123,8 +125,6 @@
 <script src="{% static 'js/plugins/nouislider.min.js' %}" type="text/javascript"></script>
 <!--  Plugin for the DatePicker, full documentation here: https://github.com/uxsolutions/bootstrap-datepicker -->
 <script src="{% static 'js/plugins/bootstrap-datepicker.js' %}" type="text/javascript"></script>
-<!--  Google Maps Plugin    -->
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
 <!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
 <script src="{% static 'js/now-ui-kit.js' %}?v=1.3.0" type="text/javascript"></script>
 </body>
