add button in ingredient list template for adding new ingredient; creating url for adding ingredient; creating view for adding ingredient

--- a/templates/bartender/storage/list.html
+++ b/templates/bartender/storage/list.html
@@ -5,6 +5,7 @@
 
 {% block content %}
   <div class="row">
+  <a class="btn btn-primary" href="{% url 'bartender:add_ingredient' %}">DODAJ</a>
     <p>Tutaj jakieś Filtry w planie</p>
   </div>
   <div class="row">
