--- a/static/css/core.css
+++ b/static/css/core.css
@@ -2,9 +2,13 @@
     background: whitesmoke;
 }
 .c-body {
-    background: #ebebeb;
+    /*background: #ebebeb; #TODO Naprawić tło core templatki*/
 }
 
 .navbar-color {
     background: rebeccapurple;
+}
+
+.required {
+    font-size:2.5vmin ;
 }
