--- a/templates/bartender/storage/update_ingredient.html
+++ b/templates/bartender/storage/update_ingredient.html
@@ -1,4 +1,5 @@
 {% extends "core/base.html" %}
+{% load static %}
 {% block content %}
   <div class="row">
     <div class="card col-lg-7 col-12 mx-auto">
@@ -8,11 +9,22 @@
           {{ formset.management_form }}
           {% csrf_token %}
           {{ form.id }}
-
+{#          {{ form.image }}#}
+          <div class="row">
+            <div class="col text-center">
+              {% if form.image.value %}
+                <img class="card-img-top" src="{{ form.image.value.url }}" alt="{{ form.image.name }}"
+                     style="max-height: 20vw; width: auto">
+              {% else %}
+                <img class="card-img-top" src="{% static 'img/no-image-available.jpg' %}" alt="No image available"
+                     style="max-height: 15vw; width: auto">
+              {% endif %}
+            </div>
+          </div>
           {% for field in form %}
             <div class="row">
               <div class="col-lg-4 col-5 h5 text-right">
-                <label class="col-form-label">
+                <label class="col-form-labell">
                   {{ field.label }}
                   {% if field.field.required %}
                     <span class="required">*</span>
@@ -20,17 +32,17 @@
                 </label>
               </div>
               <div class="col-lg-8 col-7">
-                    {{ field }}
-                  <small id="{{ field.text }}help" class="form-text text-muted">{{ field.help_text }}</small>
-                  {% for error in field.errors %}
-                    <div class="alert alert-warning alert-dismissible fade show mt-1 mb-1" role="alert">
-                      {{ error }}
-                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
-                    </div>
-                  {% endfor %}
-                </div>
+                {{ field }}
+                <small id="{{ field.text }}help" class="form-text text-muted">{{ field.help_text }}</small>
+                {% for error in field.errors %}
+                  <div class="alert alert-warning alert-dismissible fade show mt-1 mb-1" role="alert">
+                    {{ error }}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                {% endfor %}
+              </div>
             </div>
           {% endfor %}
 
