little modification in ingredient template; creating form for drink;

--- a/templates/bartender/storage/list_ingredient.html
+++ b/templates/bartender/storage/list_ingredient.html
@@ -5,7 +5,7 @@
 
 {% block content %}
   <div class="row">
-    <a class="btn btn-primary" href="{% url 'bartender:add_ingredient' %}">DODAJ</a>
+    <a class="btn btn-primary" href="{% url 'bartender:create_ingredient' %}">DODAJ</a>
   </div>
   <div class="row">
     <p>Tutaj jakieś Filtry w planie</p>
