--- a/templates/bartender/storage/create_ingredient.html
+++ b/templates/bartender/storage/create_ingredient.html
@@ -1,4 +1,4 @@
-{% extends "core/base.html" %}
+{% extends "bartender/base.html" %}
 {% block content %}
   <div class="row">
     <div class="card col-lg-7 col-12 mx-auto">
@@ -36,7 +36,7 @@
 
           <div class="row">
             <div class="col-lg-6 col-8">
-              <a class="btn btn-secondary btn-round" href="{% url 'bartender:storage_list' %}">Wróć do stanu
+              <a class="btn btn-secondary btn-round" href="{% url 'bartender:storage_ingredient_list' %}">Wróć do stanu
                 magazynu</a>
             </div>
             <div class="col-lg-6 col-4 text-right">
