--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -3,7 +3,12 @@
 {% block title %}Strona główna{% endblock %}
 {% block navbar %}
   <li class="nav-item">
-    <a class="nav-link" href="{% url 'core:home' %}">Strona główna</a>
+    {% if request.user.is_in_staff %}
+      <a class="nav-link" href="{% url 'bartender:home' %}">Strona główna</a>
+    {% else %}
+      <a class="nav-link" href="{% url 'core:home' %}">Strona główna</a>
+    {% endif %}
+
   </li>
 {% endblock %}
 
