--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -21,12 +21,11 @@
 
 <head>
   <meta charset="utf-8"/>
-  <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}">
+  <link href="{% static 'img/favicon_2.ico' %}" rel="shortcut icon" type="image/x-icon" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
   <title>
     {% block title %} Blank {% endblock %}
   </title>
-
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no'
         name='viewport'/>
   <!--     Fonts and icons     -->
