--- a/templates/bartender/drink/list_drink.html
+++ b/templates/bartender/drink/list_drink.html
@@ -12,7 +12,7 @@
   </div>
   <div class="row">
     {% for drink in drinks %}
-      <div class="col-6 col-lg-3 d-flex align-items-stretch">
+      <div class="col-12 col-lg-4 d-flex align-items-stretch">
         <div class="card rounded" style="font-size:2vmin">
           <a href="{% url 'bartender:detail_drink' drink.pk %}" style="text-decoration: none; color:inherit">
             <div class="text-center">
@@ -32,6 +32,13 @@
               <div class="card-text">Do zrobienia?: <p>{% if drink.is_possible_to_make %} Tak {% else %}
                 Nie {% endif %}</p></div>
               <div class="card-text">Data utworzenia: <p>{{ drink.date_creation }}</p></div>
+              <div class="card-text">Składniki:
+                {% for ingredeint in drink.ingredient_needed.all %}
+                  <p>{{ ingredeint.storage_ingredient.name }}</p>
+                {% empty %}
+                  <p>Nie przypisano składników</p>
+                {% endfor %}
+              </div>
             </div>
           </a>
         </div>
