add pages needed to navbar; make navbar fixed-top;

--- a/templates/bartender/base.html
+++ b/templates/bartender/base.html
@@ -9,4 +9,13 @@
   <li class="nav-item">
     <a class="nav-link" href="{% url 'bartender:drink_list' %}">Drinki</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Kolejka zamówień</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Propozycje drinków</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Statystyki</a>
+  </li>
 {% endblock %}
