Crud for Drink and Ingredient Needed (#3)
* creating property is_in_Staff; make drink image possible to be blank; add migrations

* creating property is_in_Staff; make drink image possible to be blank; add migrations

* a little template, urlnames and view names refactoring; create list, create, detail, delete and update view for drink

* a little template, urlnames and view names refactoring; create list, create, detail, delete and update view for drink

* little modification in ingredient template; creating form for drink;

* creating template for crud of drink;

* change ux of drink detail info; add favicon to website;

* add isort to poetry

* isort

* creating ingredient needed form

* isort; add docstring for bartender views; better qs in DrinkListView; change success_url in DrinkCreateView; create IngredientNeededCreateView, IngredientNeededUpdateView, IngredientNeededDeleteView;

* add pages needed to navbar; make navbar fixed-top;

--- a/templates/bartender/base.html
+++ b/templates/bartender/base.html
@@ -4,6 +4,18 @@
     <a class="nav-link" href="{% url 'bartender:home' %}">Strona główna</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="{% url 'bartender:storage_list' %}">Magazyn</a>
+    <a class="nav-link" href="{% url 'bartender:storage_ingredient_list' %}">Magazyn</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'bartender:drink_list' %}">Drinki</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Kolejka zamówień</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Propozycje drinków</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Statystyki</a>
   </li>
 {% endblock %}
