--- a/templates/bartender/drink/create_drink.html
+++ b/templates/bartender/drink/create_drink.html
@@ -36,8 +36,7 @@
 
           <div class="row">
             <div class="col-lg-6 col-8">
-              <a class="btn btn-secondary btn-round" href="{% url 'bartender:storage_ingredient_list' %}">Wróć do stanu
-                magazynu</a>
+              <a class="btn btn-secondary btn-round" href="{% url 'bartender:drink_list' %}">Wróć do listy drinków</a>
             </div>
             <div class="col-lg-6 col-4 text-right">
               <button class="btn btn-outline-success btn-round" type="submit">Zapisz</button>
