--- a/templates/bartender/ingredient_needed/delete_ingredient_needed.html
+++ b/templates/bartender/ingredient_needed/delete_ingredient_needed.html
@@ -7,11 +7,11 @@
         <form method="post">
           {% csrf_token %}
           <div class="row col-lg-8 mx-auto mb-5">
-            <h5>Jesteś pewny, że chcesz usunąć składnik: "{{ storage_ingredient.name }}"?</h5>
+            <h5>Jesteś pewny, że chcesz usunąć składnik drinka?: "{{ object.storage_ingredient.name }}"?</h5>
           </div>
           <div class="row col-lg-10 mx-auto mt-5">
             <div class="col-lg-7 col-12 text-center">
-              <a class="btn btn-secondary btn-round" href="{% url 'bartender:update_ingredient' object.id %}">Wróć do
+              <a class="btn btn-secondary btn-round" href="{% url 'bartender:update_ingredient_needed' object.id %}">Wróć do
                 edycji skłanika</a>
             </div>
             <div class="col-lg-5 col-12 text-center my-auto h-100">
