add title in template

--- a/templates/bartender/drink/delete_drink.html
+++ b/templates/bartender/drink/delete_drink.html
@@ -1,4 +1,6 @@
 {% extends "bartender/base.html" %}
+{% block title %}Drink{% endblock %}
+
 {% load static %}
 {% block content %}
   <div class="row">
