--- a/templates/bartender/drink/detail_drink.html
+++ b/templates/bartender/drink/detail_drink.html
@@ -1,5 +1,7 @@
 {% extends "bartender/base.html" %}
 {% load static %}
+{% block title %}Drink{% endblock %}
+
 {% block content %}
 
   <div class="row">
