--- a/templates/bartender/drink/list_drink.html
+++ b/templates/bartender/drink/list_drink.html
@@ -1,7 +1,6 @@
 {% extends "bartender/base.html" %}
 {% load static %}
-{% block title %}Magazyn {% endblock %}
-
+{% block title %}Drink{% endblock %}
 
 {% block content %}
   <div class="row">
