--- a/templates/bartender/ingredient_needed/delete_ingredient_needed.html
+++ b/templates/bartender/ingredient_needed/delete_ingredient_needed.html
@@ -1,5 +1,7 @@
 {% extends "bartender/base.html" %}
 {% load static %}
+{% block title %}Potrzebne składniki{% endblock %}
+
 {% block content %}
   <div class="row">
     <div class="card col-lg-7 col-12 mx-auto">
