--- a/templates/bartender/ingredient_needed/create_ingredient_needed.html
+++ b/templates/bartender/ingredient_needed/create_ingredient_needed.html
@@ -1,4 +1,6 @@
 {% extends "bartender/base.html" %}
+{% block title %}Potrzebne składniki{% endblock %}
+
 {% block content %}
   <div class="row">
     <div class="card col-lg-7 col-12 mx-auto">
