--- a/templates/bartender/storage/create_ingredient.html
+++ b/templates/bartender/storage/create_ingredient.html
@@ -1,4 +1,6 @@
 {% extends "bartender/base.html" %}
+{% block title %}Magazyn{% endblock %}
+
 {% block content %}
   <div class="row">
     <div class="card col-lg-7 col-12 mx-auto">
