--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -120,6 +120,8 @@
 
 
 <!--   Core JS Files   -->
+<script src="{% static 'js/core/getCSRFToken.js' %}" type="text/javascript"></script>
+
 <script src="{% static 'js/core/jquery.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/core/popper.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/core/bootstrap.min.js' %}" type="text/javascript"></script>
@@ -131,6 +133,7 @@
 <script src="{% static 'js/plugins/bootstrap-datepicker.js' %}" type="text/javascript"></script>
 <!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
 <script src="{% static 'js/now-ui-kit.js' %}?v=1.3.0" type="text/javascript"></script>
+{% block js %}{% endblock %}
 </body>
 
 </html>
