--- a/templates/customer/base.html
+++ b/templates/customer/base.html
@@ -9,4 +9,10 @@
   <li class="nav-item">
     <a class="nav-link" href="{% url 'customer:drink_list' %}">Drinki</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'customer:orders_list' %}">Zamówienia</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Historia Zamówień</a>
+  </li>
 {% endblock %}
