--- a/templates/bartender/drink/list_drink.html
+++ b/templates/bartender/drink/list_drink.html
@@ -14,7 +14,7 @@
       <div class="col-12 col-lg-4 d-flex align-items-stretch">
         <div class="card rounded" style="font-size:2vmin">
           <a href="{% url 'bartender:detail_drink' drink.pk %}" style="text-decoration: none; color:inherit">
-            <div class="text-center">
+            <div class="card-body text-center">
               {% if drink.image %}
                 <img class="card-img-top" src="{{ drink.image.url }}" alt="{{ drink.name }}"
                      style="max-height: 15vw; width: auto">
