--- a/templates/customer/base.html
+++ b/templates/customer/base.html
@@ -13,6 +13,6 @@
     <a class="nav-link" href="{% url 'customer:orders_list' %}">Zamówienia</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Historia Zamówień</a>
+    <a class="nav-link" href="{% url 'customer:history_orders_list' %}">Historia Zamówień</a>
   </li>
 {% endblock %}
