--- a/templates/bartender/drink/detail_drink.html
+++ b/templates/bartender/drink/detail_drink.html
@@ -1,6 +1,6 @@
 {% extends "bartender/base.html" %}
 {% load static %}
-{% block title %}Drink{% endblock %}
+{% block title %}Drink - szczegóły{% endblock %}
 
 {% block content %}
 
@@ -8,13 +8,11 @@
     <div class="card col-lg-7 col-11 mx-auto">
       <div class="card-body">
         <div class="row pb-3">
-          <div class="col text-center">
+          <div class="col text-center core_image_frame">
             {% if drink.image %}
-              <img class="card-img-top" src="{{ drink.image.url }}" alt="{{ drink.image.name }}"
-                   style="max-height: 20vw; width: auto">
+              <img class="card-img-top core_image_sizes" src="{{ drink.image.url }}" alt="{{ drink.image.name }}">
             {% else %}
-              <img class="card-img-top" src="{% static 'img/no-image-available.jpg' %}" alt="No image available"
-                   style="max-height: 15vw; width: auto">
+              <img class="card-img-top core_image_sizes" src="{% static 'img/no-image-available.jpg' %}" alt="No image available">
             {% endif %}
           </div>
         </div>
