--- a/templates/bartender/storage/list_ingredient.html
+++ b/templates/bartender/storage/list_ingredient.html
@@ -14,13 +14,11 @@
       <div class="col-6 col-lg-3 d-flex align-items-stretch">
         <div class="card rounded" style="font-size:2vmin">
           <a href="{% url 'bartender:update_ingredient' ingredient.pk %}" style="text-decoration: none; color:inherit">
-            <div class="card-body text-center">
+            <div class="card-body text-center core_image_frame">
               {% if ingredient.image %}
-                <img class="card-img-top" src="{{ ingredient.image.url }}" alt="{{ ingredient.name }}"
-                     style="max-height: 15vw; width: auto">
+                <img class="card-img-top core_image_sizes" src="{{ ingredient.image.url }}" alt="{{ ingredient.name }}">
               {% else %}
-                <img class="card-img-top" src="{% static 'img/no-image-available.jpg' %}" alt="No image available"
-                     style="max-height: 15vw; width: auto">
+                <img class="card-img-top core_image_sizes" src="{% static 'img/no-image-available.jpg' %}" alt="No image available">
               {% endif %}
             </div>
             <div class="card-body">
