change set_table navbar icon;

--- a/templates/customer/drink/list_drink.html
+++ b/templates/customer/drink/list_drink.html
@@ -7,6 +7,7 @@
   <div class="row">
     <p>Tutaj jakieś Filtry w planie</p>
   </div>
+  <div class="row justify-content-center"><h3>Drinki</h3></div>
   <div class="row">
     {% for drink in drinks %}
       <div class="col-12 col-lg-4 d-flex align-items-stretch">
@@ -15,7 +16,8 @@
             {% if drink.image %}
               <img class="card-img-top core_image_sizes" src="{{ drink.image.url }}" alt="{{ drink.name }}">
             {% else %}
-              <img class="card-img-top core_image_sizes" src="{% static 'img/no-image-available.jpg' %}" alt="No image available">
+              <img class="card-img-top core_image_sizes" src="{% static 'img/no-image-available.jpg' %}"
+                   alt="No image available">
             {% endif %}
           </div>
           <div class="card-body">
