--- a/templates/customer/base.html
+++ b/templates/customer/base.html
@@ -1,13 +1,13 @@
 {% extends "core/base.html" %}
 {% block navbar %}
   <li class="nav-item">
-    <a class="nav-link" href="{% url 'customer:set_table' %}">Zmien stolik<i class="fab fa-acquisitions-incorporated"></i></a>
+    <a class="nav-link" href="{% url 'customer:set_table' %}">Zmien stolik<img src="https://img.icons8.com/material-outlined/24/ffffff/table.png"/></a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="{% url 'customer:home' %}">Strona główna</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="{% url 'customer:drink_list' %}">Drinki</a>
+    <a class="nav-link" href="{% url 'customer:drink_list' %}">Menu</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="{% url 'customer:orders_list' %}">Zamówienia</a>
